# garmin-platform

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  gitsetup.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
backend/: Dockerfile  README.md
backend/alembic/: README.md  env.py
backend/app/: bootstrap_garmin_auth.py  main.py  observability.py  print_sync_status.py  probe_garmin_health.py  reprocess_fit_files.py  seed_frontend_fixture.py  startup_checks.py
backend/tests/: conftest.py  test_activities_endpoint.py  test_activity_fit_downloader.py  test_activity_reprocess.py  test_analytics_endpoint.py  test_analytics_queries.py  test_daily_metrics_endpoint.py  test_fit_ingestion_integration.py  test_fit_parser.py  test_frontend_fixture_seed.py  test_garmin_backfill.py  test_garmin_retry.py  test_health_endpoint.py  test_print_sync_status.py  test_sync_status_endpoint.py  test_sync_worker.py
docs/: dev_deployment.md  frontend_fixture_dataset.md  imac_setup.md  implementation.md  original_schema.md  playwright_screenshots.md  prd.md  task_91_garmin_health_research.md  task_92_schema_design.md  tasks.md  v2_dashboard_blueprint.md  v2_dashboard_research.md
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/components/: app-shell.tsx  feedback.tsx  localized-time.tsx  page-shell.tsx  sport.tsx
frontend/lib/: api.ts  sports.ts  (+2 more)
(+83 files in other folders)
