[project]
name = "garmin-platform"
version = "0.1.0"
description = "Local Garmin data platform"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "fitparse>=1.2.0",
    "garth>=0.6.3",
    "psycopg[binary]>=3.3.3",
    "requests>=2.33.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pip-audit>=2.10.0",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
